# Arabic-audio-understanding-speech-to-text

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: streamlit_app.py
configs/: default.yaml
docs/: architecture.md  dataset.md  experiments_template.md
scripts/: build_search_index.py  download_common_voice.py  evaluate_asr.py  prepare_data.py  train_ctc.py
scripts/data/: download_common_voice.py  prepare_data.py
scripts/evaluation/: evaluate_asr.py
scripts/retrieval/: build_search_index.py
scripts/training/: train_ctc.py
src/arabic_audio_understanding.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/audio_understanding/: __init__.py  config.py  pipeline.py  simple_pipeline.py
src/audio_understanding/advanced/: __init__.py  emotion.py  keyword_spotting.py  search.py  speaker_id.py  summarization.py
src/audio_understanding/asr/: __init__.py  cnn_lstm_ctc.py  wav2vec_asr.py  whisper_asr.py
src/audio_understanding/utils/: __init__.py  metrics.py  text.py
tests/: test_keyword_spotting.py
